# vcmp-sqlite

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
samples/: alias.nut
src/include/: vcmp.h
src/plugin/: CMakeLists.txt  console.c  console.h  functions.c  main.c  main.h
src/squirrel/: SQImports.h  squirrel.h
